# color-code-generator

./: .flake8  README.md  pyproject.toml
src/ccg/: __init__.py  cli.py  dark_gradient.py  dummy.py  gradient.py  hexcolor.py  rgbcolor.py
src/ccg/exporter/: __init__.py  code_snippets.py  css.py  exporter.py
src/ccg/models/: __init__.py  app_config.py  color.py
src/ccg/utils/: __init__.py  custom_logger.py  git_version.py
tests/: test_gradcolor.py  test_rgb2hex.py
